# flask-repo

./: Makefile  config.py  pyproject.toml
app/: routes.py
app/templates/: base.html
