[tool.poetry]
name = "flask-repo"
version = "0.1.1"
description = ""
authors = ["Charlie Clark <charlieclark17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
flask = ">=3.1.0,<4.0.0"
flask-wtf = ">=1.2.2,<2.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
flask-migrate = ">=4.1.0,<5.0.0"
flask-login = ">=0.6.3,<0.7.0"
email-validator = ">=2.2.0,<3.0.0"
aiosmtpd = ">=1.4.6,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
